--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,14 @@
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans');
+
 .app {
-    background-color: #111;
-    
+    background-color: #111; 
+    font-family: 'Josefin Sans', cursive;
+}
+
+
+@media (orientation: landscape) {
+    body {
+        background-color: #000;
+        background-image: none;
+    }
 }
