--- a/src/Row.css
+++ b/src/Row.css
@@ -1,6 +1,7 @@
 .row {
     color: white;
     margin-left: 20px;
+    z-index: 100;
 }
 
 .row__posters {
@@ -18,12 +19,12 @@
     max-height: 125px;
     border-radius: 5px;
     object-fit: contain;
-    margin-right: 10px;
+    margin: 0 6.2px;
     transition: transform 450ms;
 }
 
 .row__poster:hover {
-    transform: scale(1.3);
+    transform: scale(1.09);
     opacity: 1;
 }
 
@@ -32,17 +33,23 @@
 }
 
 .row__movieName {
-    width: 90%;
+    width: 100%;
 }
 
 
 .row__movieDetails {
     display: none;
     position: absolute;
+    
 }
 
 .row__posterDetails:hover .row__movieDetails{
     display: block;
+}
+
+
+.row__posterDetails {
+    position: relative;
 }
 
 
