--- a/src/screens/ProfileScreen.css
+++ b/src/screens/ProfileScreen.css
@@ -75,6 +75,90 @@
     padding-bottom: 5px;
 }
 
+.subscription__loading {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    height: 100%;
+    width: 100%;
+    transform: translate(-50%, -50%);
+    z-index: 100;
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.loader__symbol {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.loader{
+    display: block;
+    position: relative;
+    height: 32px;
+    width: 150px;
+    box-sizing: border-box;
+    overflow: hidden;
+    border: 2px solid #FFF;
+    border-radius: 20px;
+  }
+  .loader:before{
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 2px;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    background: #e50914;
+    animation: ballbns 2s ease-in-out infinite;
+  }
+  
+  @keyframes ballbns {
+    0% {  
+        left: 0; 
+        transform: translateX(0%); 
+        box-shadow: 
+        -5px 0 0 -1px rgba(229, 9, 20, 0.9),
+        -10px 0 0 -2px rgba(229, 9, 20, 0.8),
+        -15px 0 0 -4px rgba(229, 9, 20, 0.6),
+        -20px 0 0 -6px rgba(229, 9, 20, 0.4),
+        -25px 0 0 -8px rgba(229, 9, 20, 0.2);
+    }
+    49% {  
+        left: 100%; 
+        transform: translateX(-100%); 
+        box-shadow: 
+        -5px 0 0 -1px rgba(229, 9, 20, 0.9),
+        -10px 0 0 -2px rgba(229, 9, 20, 0.8),
+        -15px 0 0 -4px rgba(229, 9, 20, 0.6),
+        -20px 0 0 -6px rgba(229, 9, 20, 0.4),
+        -25px 0 0 -8px rgba(229, 9, 20, 0.2);
+    }
+    51% {  
+        left: 100%; 
+        transform: translateX(-100%); 
+        box-shadow: 
+        5px 0 0 -1px rgba(229, 9, 20, 0.9),
+        10px 0 0 -2px rgba(229, 9, 20, 0.8),
+        15px 0 0 -4px rgba(229, 9, 20, 0.6),
+        20px 0 0 -6px rgba(229, 9, 20, 0.4),
+        25px 0 0 -8px rgba(229, 9, 20, 0.2);
+    }
+    100% {  
+        left: 0; 
+        transform: translateX(0%); 
+        box-shadow: 
+        5px 0 0 -1px rgba(229, 9, 20, 0.9),
+        10px 0 0 -2px rgba(229, 9, 20, 0.8),
+        15px 0 0 -4px rgba(229, 9, 20, 0.6),
+        20px 0 0 -6px rgba(229, 9, 20, 0.4),
+        25px 0 0 -8px rgba(229, 9, 20, 0.2);
+    }
+  }  
+  
+
 @media only screen and (max-width: 640px) {
     .profileScreen__body {
         padding-top: 25%;
