--- a/src/screens/SignupScreen.css
+++ b/src/screens/SignupScreen.css
@@ -4,7 +4,7 @@
     margin-left: auto;
     margin-right: auto;
     margin-top: -4%;
-    background: rgba(0, 0, 0, 0.85);
+    background: rgba(0, 0, 0, 0.75);
 }
 
 .signupScreen > form {
@@ -48,4 +48,10 @@
 .signupScreen__link:hover {
     cursor: pointer;
     text-decoration: underline;
+}
+
+.email, .password {
+    background-color: #333;
+    color: #fff;
+    font-size: 16px;
 }
