--- a/src/Row.css
+++ b/src/Row.css
@@ -8,7 +8,7 @@
     display: flex;
     overflow-y: hidden;
     overflow-x: scroll;
-    padding: 20px;
+    padding: 15px 0px 20px 4px;
 }
 
 .row__posters::-webkit-scrollbar {
@@ -21,11 +21,15 @@
     object-fit: contain;
     margin: 0 6.2px;
     transition: transform 450ms;
+    border: 2px solid transparent;
+    opacity: 1;
 }
 
 .row__poster:hover {
-    transform: scale(1.09);
+    transform: scale(1.11);
     opacity: 1;
+    position: static;
+    border: 2px solid #fff;
 }
 
 .row__posterLarge {
@@ -35,7 +39,6 @@
 .row__movieName {
     width: 100%;
 }
-
 
 .row__movieDetails {
     display: none;
@@ -52,6 +55,39 @@
     position: relative;
 }
 
+.playButton {
+    width: 100%;
+    border: 1.5px solid #fff;
+    border-radius: 25px;
+    padding: 5px 10px;
+    margin-bottom: 5px;
+}
+
+.playButton:hover {
+    color: black;
+    transition: 0.8s;
+    background-color: #fff;
+    cursor: pointer;
+}
+
+.container{
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.row__posterDetails:hover .row__poster {
+    opacity: 0.3;
+  }
+
+.row__posterDetails:hover .container {
+    opacity: 1;
+}
 
 @media only screen and (max-width: 640px) {
     .row__poster {
