--- a/src/Banner.css
+++ b/src/Banner.css
@@ -1,20 +1,22 @@
 .banner {
     position: relative;
-    height: 448px;
+    height: 498px;
     color: white;
     object-fit: contain;
 }
 
 .banner__contents {
     margin-left: 30px;
-    padding-top: 140px;
+    padding-top: 200px;
     height: 190px;
 }
 
 .banner__title {
-    font-size: 3rem;
+    font-size: 2.5rem;
     font-weight: 800;
     padding-bottom: 0.3rem;
+    line-height: 1;
+    margin-bottom: 10px;
 }
 
 .banner__description {
@@ -22,12 +24,12 @@
     line-height: 1.3;
     padding-top: 1rem;
     font-size: 0.8rem;
-    max-width: 360px;
+    max-width: 385px;
     height: 80px;
 }
 
 .banner--fadeBottom {
-    height: 7.4rem;
+    height: 6.8em;
     background-image: linear-gradient(
         180deg,
         transparent,
@@ -43,16 +45,32 @@
     border: none;
     font-weight: 700;
     border-radius: 0.2vw;
-    padding-left: 2rem;
-    padding-right: 2rem;
     margin-right: 1rem;
-    padding-top: 0.5rem;
     background-color: rgba(51, 51, 51, 0.5);
-    padding-bottom: 0.5rem;
+    padding: 0.5rem 1rem;
+    font-size: 1rem;
 }
 
 .banner__button:hover {
     color: #000;
     background-color: #f7f5f5;
     transition: all 0.3s;
+}
+
+@media only screen and (max-width: 640px) {
+    .banner {
+        height: 448px;
+    }
+
+    .banner__contents {
+        height: 170px;
+    }
+
+    .banner__title {
+        font-size: 2.2rem;
+    }
+
+    .banner--fadeBottom {
+        height: 4.855em;
+    }
 }
