--- a/src/screens/ProfileScreen.css
+++ b/src/screens/ProfileScreen.css
@@ -31,7 +31,7 @@
     font-weight: 100;
 }
 
-.profileScreen__body > h1 {
+.profileScreen__body > .profileScreen__mainSection > h1 {
     font-size: 50px;
     font-weight: 400;
     border-bottom: 1px solid #f12323;
@@ -66,7 +66,7 @@
 }
 
 .profileScreen__plans {
-    margin-top: 20px;
+    margin-top: 13px;
 }
 
 .profileScreen__plans > .profileScreen__plansHeading {
@@ -168,8 +168,16 @@
         width: 100%;
     }
 
-    .profileScreen__body > h1 {
-        font-size: 42px ;
+    .profileScreen__mainSection {
+        margin: 0 5px;
+    }
+
+    .profileScreen__details {
+        margin-left: 10px;
+    }
+
+    .profileScreen__body > .profileScreen__mainSection > h1 {
+        font-size: 38px ;
         padding-bottom: 5px;
     }
 
