--- a/src/screens/SignupScreen.css
+++ b/src/screens/SignupScreen.css
@@ -55,3 +55,22 @@
     color: #fff;
     font-size: 16px;
 }
+
+.button__fade {
+    opacity: 0.8 !important;
+}
+
+.icon__spinner {
+    animation: spin-animation 1s infinite;
+    animation-timing-function: linear;
+    display: inline-block;
+  }
+
+@keyframes spin-animation {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(359deg);
+    }
+  }
